menu fix z-index

--- a/less/menu.less
+++ b/less/menu.less
@@ -22,7 +22,7 @@
         padding:1vw;
         width:0px;
         height:0px;
-
+        z-index:22;
         span{
           position:relative;
           margin-top:-1vw;
@@ -96,6 +96,7 @@
     .active{
         margin-top:10vw;
         opacity:1;
+        z-index:10;
     }
 
     .nav{
